# intent-recognizer-cpp

./: CMakeLists.txt  README.md
include/: Intent.h  IntentCalender.h  IntentFact.h  IntentFactory.h  IntentWeather.h  IntentWeatherCity.h
src/: CMakeLists.txt  IntentCalender.cpp  IntentFact.cpp  IntentFactory.cpp  IntentWeather.cpp  IntentWeatherCity.cpp  main.cpp
test/: CMakeLists.txt  unitTests.cpp
